finished assignment operators

--- a/index.html
+++ b/index.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS Overview</title>
 </head>
 <body>
     
 <!-- use the prompt() function to get the users 2 numbers and an operator -->
-    <script>
-       console.log(5+5); 
-    </script>
+    <script src='./js/script.js'> </script>
 </body>
-
 </html>
