--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Overview</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
-<!-- use the prompt() function to get the users 2 numbers and an operator -->
+
+    <h1>Some Header</h1>
+    <h2 id="time">  Time: 10</h2>
+
+    <button id="start-btn"> Start Timer</button>
+    <!-- <img src="https://images.pexels.com/photos/28056731/pexels-photo-28056731/free-photo-of-a-plate-with-a-bagel-and-coffee-on-it.jpeg" id="main-image"> -->
+   
+    <p class='special-paragraph'>Some paragraph </p>
+
+    <h1>Notes:</h1>
+
+    <section class="output">
+        <article>
+            <h3>Some note about something</h3>
+            <p>Added On: 9/20/2024</p>
+        </article>
+    </section>
+
     <script src='./js/script.js'> </script>
 </body>
 </html>
